# flysight

./: .gitignore  Makefile.pos_leds
src/: Config.c  Config.cpp  Log.h  Main.cpp  PosLeds.cpp  PosLeds.h  Power.h  Signature.h  Time.c  Tone.c  UBX.c  UBX.cpp  UBX.h  UsbInterface.h  exit_finder.cpp  exit_finder.h  navigation.cpp  navigation.h  position_leds.cpp  position_leds.h  uart.h
src/Board/: LEDs.h
src/Lib/: MMC.c  MMC.h
test/: CMakeLists.txt  README.md  common_test.cc  conanfile.txt  requirements.txt  uart.c
test/avr/: io.c
test/data/: CONFIG.TXT
test/include/FatFS/: ff.h
test/include/avr/: interrupt.h  io.h  pgmspace.h
test/include/flysight/fw/: exit_finder.h  position_leds.h
test/include/util/: atomic.h  delay.h
test/src/FatFS/: ff.cpp
test/src/avr/: pgmspace.c
